fix: Remove deprecated Spring Security configuration usage