@@ -41,6 +41,7 @@ import org.hisp.dhis.security.MappedRedirectStrategy;
 import org.hisp.dhis.security.authtentication.CustomAuthFailureHandler;
 import org.hisp.dhis.security.ldap.authentication.CustomLdapAuthenticationProvider;
 import org.hisp.dhis.security.oidc.DhisOidcLogoutSuccessHandler;
+import org.hisp.dhis.security.oidc.OIDCLoginEnabledCondition;
 import org.hisp.dhis.security.spring2fa.TwoFactorAuthenticationProvider;
 import org.hisp.dhis.security.spring2fa.TwoFactorWebAuthenticationDetailsSource;
 import org.hisp.dhis.security.vote.ActionAccessVoter;
@@ -56,6 +57,7 @@ import org.hisp.dhis.webapi.security.vote.SimpleAccessVoter;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Conditional;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.ImportResource;
 import org.springframework.core.annotation.Order;
@@ -67,9 +69,8 @@ import org.springframework.security.access.vote.UnanimousBased;
 import org.springframework.security.authentication.DefaultAuthenticationEventPublisher;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.builders.WebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.access.expression.DefaultWebSecurityExpressionHandler;
 import org.springframework.security.web.access.expression.WebExpressionVoter;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -80,7 +81,7 @@ import org.springframework.security.web.util.matcher.RequestMatcher;
 /**
  * The {@code DhisWebCommonsWebSecurityConfig} class configures mostly all
  * authentication and authorization NOT on the /api endpoint.
- *
+ * <p>
  * Almost all /api/* endpoints are configured in
  * {@code DhisWebApiWebSecurityConfig}
  *
@@ -98,284 +99,255 @@ public class DhisWebCommonsWebSecurityConfig
         "/dhis-web-commons-stream/ping.action", "/",
         "/api/files/style/external", "/" );
 
-    /**
-     * This configuration class is responsible for setting up the session
-     * management.
-     */
-    @Configuration
-    @Order( 3300 )
-    public static class SessionWebSecurityConfigurerAdapter extends WebSecurityConfigurerAdapter
-    {
-        @Autowired
-        private DhisConfigurationProvider dhisConfig;
+    @Autowired
+    private TwoFactorWebAuthenticationDetailsSource twoFactorWebAuthenticationDetailsSource;
 
-        @Override
-        protected void configure( HttpSecurity http )
-            throws Exception
-        {
-            http
-                .sessionManagement()
-                .requireExplicitAuthenticationStrategy( true )
-                .sessionFixation().migrateSession()
-                .sessionCreationPolicy( SessionCreationPolicy.ALWAYS )
-                .enableSessionUrlRewriting( false )
-                .maximumSessions( Integer.parseInt( dhisConfig.getProperty( ConfigurationKey.MAX_SESSIONS_PER_USER ) ) )
-                .expiredUrl( "/dhis-web-commons-security/logout.action" );
-        }
+    @Autowired
+    private DhisConfigurationProvider dhisConfig;
+
+    @Autowired
+    private ExternalAccessVoter externalAccessVoter;
+
+    @Autowired
+    TwoFactorAuthenticationProvider twoFactorAuthenticationProvider;
+
+    @Autowired
+    private DhisOidcLogoutSuccessHandler dhisOidcLogoutSuccessHandler;
+
+    @Autowired
+    @Qualifier( "customLdapAuthenticationProvider" )
+    private CustomLdapAuthenticationProvider customLdapAuthenticationProvider;
+
+    @Autowired
+    private CustomAuthFailureHandler customAuthFailureHandler;
+
+    @Autowired
+    private DefaultAuthenticationEventPublisher authenticationEventPublisher;
+
+    @Autowired
+    private ConfigurationService configurationService;
+
+    @Autowired
+    void registerProvider( AuthenticationManagerBuilder builder )
+    {
+        builder.authenticationProvider( customLdapAuthenticationProvider );
+        builder.authenticationProvider( twoFactorAuthenticationProvider );
+        builder.authenticationEventPublisher( authenticationEventPublisher );
     }
 
-    /**
-     * This configuration class is responsible for setting up the form login and
-     * everything related to the web pages.
-     */
-    @Configuration
-    @Order( 2200 )
-    public static class FormLoginWebSecurityConfigurerAdapter extends WebSecurityConfigurerAdapter
+    @Bean
+    @Order( 100 )
+    @Conditional( value = OIDCLoginEnabledCondition.class )
+    public SecurityFilterChain formSecurityFilterChain( HttpSecurity http )
+        throws Exception
     {
-        @Autowired
-        private TwoFactorWebAuthenticationDetailsSource twoFactorWebAuthenticationDetailsSource;
+        http
+            .authorizeRequests()
+            .accessDecisionManager( accessDecisionManager() )
+            .requestMatchers( analyticsPluginResources() ).permitAll()
 
-        @Autowired
-        private DhisConfigurationProvider dhisConfig;
+            .antMatchers( "/impersonate" ).hasAnyAuthority( "ALL", "F_IMPERSONATE_USER" )
 
-        @Autowired
-        private ExternalAccessVoter externalAccessVoter;
+            .antMatchers( "/api/staticContent/**" ).permitAll()
+            .antMatchers( "/dhis-web-commons/oidc/**" ).permitAll()
+            .antMatchers( "/dhis-web-commons/javascripts/**" ).permitAll()
+            .antMatchers( "/dhis-web-commons/css/**" ).permitAll()
+            .antMatchers( "/dhis-web-commons/flags/**" ).permitAll()
+            .antMatchers( "/dhis-web-commons/fonts/**" ).permitAll()
+            .antMatchers( "/api/files/style/external" ).permitAll()
+            .antMatchers( "/external-static/**" ).permitAll()
+            .antMatchers( "/favicon.ico" ).permitAll()
+            .antMatchers( "/api/publicKeys/**" ).permitAll()
+            // Dynamic content
+            .antMatchers( "/dhis-web-commons/i18nJavaScript.action" ).permitAll()
+            .antMatchers( "/oauth2/**" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/enrolTwoFa.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/login.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/logout.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/expired.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/invite.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/restore.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/recovery.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/account.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/recovery.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/loginStrings.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/accountStrings.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/recoveryStrings.action" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/logo_front.png" ).permitAll()
+            .antMatchers( "/dhis-web-commons/security/logo_mobile.png" ).permitAll()
+            .antMatchers( "/dhis-web-dashboard/**" ).hasAnyAuthority( "ALL", "M_dhis-web-dashboard" )
+            .antMatchers( "/dhis-web-pivot/**" ).hasAnyAuthority( "ALL", "M_dhis-web-pivot" )
+            .antMatchers( "/dhis-web-visualizer/**" ).hasAnyAuthority( "ALL", "M_dhis-web-visualizer" )
+            .antMatchers( "/dhis-web-data-visualizer/**" ).hasAnyAuthority( "ALL", "M_dhis-web-data-visualizer" )
+            .antMatchers( "/dhis-web-mapping/**" ).hasAnyAuthority( "ALL", "M_dhis-web-mapping" )
+            .antMatchers( "/dhis-web-maps/**" ).hasAnyAuthority( "ALL", "M_dhis-web-maps" )
+            .antMatchers( "/dhis-web-event-reports/**" ).hasAnyAuthority( "ALL", "M_dhis-web-event-reports" )
+            .antMatchers( "/dhis-web-event-visualizer/**" ).hasAnyAuthority( "ALL", "M_dhis-web-event-visualizer" )
+            .antMatchers( "/dhis-web-interpretation/**" ).hasAnyAuthority( "ALL", "M_dhis-web-interpretation" )
+            .antMatchers( "/dhis-web-settings/**" ).hasAnyAuthority( "ALL", "M_dhis-web-settings" )
+            .antMatchers( "/dhis-web-maintenance/**" ).hasAnyAuthority( "ALL", "M_dhis-web-maintenance" )
+            .antMatchers( "/dhis-web-app-management/**" ).hasAnyAuthority( "ALL", "M_dhis-web-app-management" )
+            .antMatchers( "/dhis-web-usage-analytics/**" ).hasAnyAuthority( "ALL", "M_dhis-web-usage-analytics" )
+            .antMatchers( "/dhis-web-event-capture/**" ).hasAnyAuthority( "ALL", "M_dhis-web-event-capture" )
+            .antMatchers( "/dhis-web-tracker-capture/**" ).hasAnyAuthority( "ALL", "M_dhis-web-tracker-capture" )
+            .antMatchers( "/dhis-web-cache-cleaner/**" ).hasAnyAuthority( "ALL", "M_dhis-web-cache-cleaner" )
+            .antMatchers( "/dhis-web-data-administration/**" )
+            .hasAnyAuthority( "ALL", "M_dhis-web-data-administration" )
+            .antMatchers( "/dhis-web-data-quality/**" ).hasAnyAuthority( "ALL", "M_dhis-web-data-quality" )
+            .antMatchers( "/dhis-web-messaging/**" ).hasAnyAuthority( "ALL", "M_dhis-web-messaging" )
+            .antMatchers( "/dhis-web-datastore/**" ).hasAnyAuthority( "ALL", "M_dhis-web-datastore" )
+            .antMatchers( "/dhis-web-scheduler/**" ).hasAnyAuthority( "ALL", "M_dhis-web-scheduler" )
+            .antMatchers( "/dhis-web-sms-configuration/**" )
+            .hasAnyAuthority( "ALL", "M_dhis-web-sms-configuration" )
+            .antMatchers( "/dhis-web-user/**" ).hasAnyAuthority( "ALL", "M_dhis-web-user" )
+            .antMatchers( "/dhis-web-aggregate-data-entry/**" )
+            .hasAnyAuthority( "ALL", "M_dhis-web-aggregate-data-entry" )
 
-        @Autowired
-        TwoFactorAuthenticationProvider twoFactorAuthenticationProvider;
+            .antMatchers( "/**" ).authenticated()
+            .and()
 
-        @Autowired
-        private DhisOidcLogoutSuccessHandler dhisOidcLogoutSuccessHandler;
+            .formLogin()
+            .authenticationDetailsSource( twoFactorWebAuthenticationDetailsSource )
+            .loginPage( "/dhis-web-commons/security/login.action" )
+            .usernameParameter( "j_username" ).passwordParameter( "j_password" )
+            .loginProcessingUrl( "/dhis-web-commons-security/login.action" )
+            .failureHandler( customAuthFailureHandler )
+            .successHandler( authenticationSuccessHandler() )
+            .permitAll()
+            .and()
 
-        @Autowired
-        @Qualifier( "customLdapAuthenticationProvider" )
-        private CustomLdapAuthenticationProvider customLdapAuthenticationProvider;
+            .logout()
+            .logoutUrl( "/dhis-web-commons-security/logout.action" )
+            .logoutSuccessUrl( "/" )
+            .logoutSuccessHandler( dhisOidcLogoutSuccessHandler )
+            .deleteCookies( "JSESSIONID" )
+            .permitAll()
+            .and()
 
-        @Autowired
-        private CustomAuthFailureHandler customAuthFailureHandler;
+            .exceptionHandling()
+            .authenticationEntryPoint( entryPoint() )
 
-        @Autowired
-        private DefaultAuthenticationEventPublisher authenticationEventPublisher;
+            .and()
 
-        @Autowired
-        private ConfigurationService configurationService;
+            .csrf()
+            .disable()
 
-        @Override
-        public void configure( AuthenticationManagerBuilder auth )
-            throws Exception
-        {
-            auth.authenticationProvider( customLdapAuthenticationProvider );
-            auth.authenticationProvider( twoFactorAuthenticationProvider );
-            auth.authenticationEventPublisher( authenticationEventPublisher );
-        }
+            .addFilterBefore( new CspFilter( dhisConfig, configurationService ),
+                HeaderWriterFilter.class )
 
-        @Override
-        public void configure( WebSecurity web )
-        {
-            web.ignoring().antMatchers( "/api/ping" );
-        }
+            .addFilterBefore( CorsFilter.get(), BasicAuthenticationFilter.class )
+            .addFilterBefore( CustomAuthenticationFilter.get(), UsernamePasswordAuthenticationFilter.class );
 
-        @Override
-        protected void configure( HttpSecurity http )
-            throws Exception
-        {
-            http
-                .authorizeRequests()
-                .accessDecisionManager( accessDecisionManager() )
-                .requestMatchers( analyticsPluginResources() ).permitAll()
+        http
+            .sessionManagement()
+            .requireExplicitAuthenticationStrategy( true )
+            .sessionFixation().migrateSession()
+            .sessionCreationPolicy( SessionCreationPolicy.ALWAYS )
+            .enableSessionUrlRewriting( false )
+            .maximumSessions( Integer.parseInt( dhisConfig.getProperty( ConfigurationKey.MAX_SESSIONS_PER_USER ) ) )
+            .expiredUrl( "/dhis-web-commons-security/logout.action" );
 
-                .antMatchers( "/impersonate" ).hasAnyAuthority( "ALL", "F_IMPERSONATE_USER" )
+        setHttpHeaders( http );
 
-                .antMatchers( "/api/staticContent/**" ).permitAll()
-                .antMatchers( "/dhis-web-commons/oidc/**" ).permitAll()
-                .antMatchers( "/dhis-web-commons/javascripts/**" ).permitAll()
-                .antMatchers( "/dhis-web-commons/css/**" ).permitAll()
-                .antMatchers( "/dhis-web-commons/flags/**" ).permitAll()
-                .antMatchers( "/dhis-web-commons/fonts/**" ).permitAll()
-                .antMatchers( "/api/files/style/external" ).permitAll()
-                .antMatchers( "/external-static/**" ).permitAll()
-                .antMatchers( "/favicon.ico" ).permitAll()
-                .antMatchers( "/api/publicKeys/**" ).permitAll()
-                // Dynamic content
-                .antMatchers( "/dhis-web-commons/i18nJavaScript.action" ).permitAll()
-                .antMatchers( "/oauth2/**" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/enrolTwoFa.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/login.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/logout.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/expired.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/invite.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/restore.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/recovery.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/account.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/recovery.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/loginStrings.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/accountStrings.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/recoveryStrings.action" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/logo_front.png" ).permitAll()
-                .antMatchers( "/dhis-web-commons/security/logo_mobile.png" ).permitAll()
-                .antMatchers( "/dhis-web-dashboard/**" ).hasAnyAuthority( "ALL", "M_dhis-web-dashboard" )
-                .antMatchers( "/dhis-web-pivot/**" ).hasAnyAuthority( "ALL", "M_dhis-web-pivot" )
-                .antMatchers( "/dhis-web-visualizer/**" ).hasAnyAuthority( "ALL", "M_dhis-web-visualizer" )
-                .antMatchers( "/dhis-web-data-visualizer/**" ).hasAnyAuthority( "ALL", "M_dhis-web-data-visualizer" )
-                .antMatchers( "/dhis-web-mapping/**" ).hasAnyAuthority( "ALL", "M_dhis-web-mapping" )
-                .antMatchers( "/dhis-web-maps/**" ).hasAnyAuthority( "ALL", "M_dhis-web-maps" )
-                .antMatchers( "/dhis-web-event-reports/**" ).hasAnyAuthority( "ALL", "M_dhis-web-event-reports" )
-                .antMatchers( "/dhis-web-event-visualizer/**" ).hasAnyAuthority( "ALL", "M_dhis-web-event-visualizer" )
-                .antMatchers( "/dhis-web-interpretation/**" ).hasAnyAuthority( "ALL", "M_dhis-web-interpretation" )
-                .antMatchers( "/dhis-web-settings/**" ).hasAnyAuthority( "ALL", "M_dhis-web-settings" )
-                .antMatchers( "/dhis-web-maintenance/**" ).hasAnyAuthority( "ALL", "M_dhis-web-maintenance" )
-                .antMatchers( "/dhis-web-app-management/**" ).hasAnyAuthority( "ALL", "M_dhis-web-app-management" )
-                .antMatchers( "/dhis-web-usage-analytics/**" ).hasAnyAuthority( "ALL", "M_dhis-web-usage-analytics" )
-                .antMatchers( "/dhis-web-event-capture/**" ).hasAnyAuthority( "ALL", "M_dhis-web-event-capture" )
-                .antMatchers( "/dhis-web-tracker-capture/**" ).hasAnyAuthority( "ALL", "M_dhis-web-tracker-capture" )
-                .antMatchers( "/dhis-web-cache-cleaner/**" ).hasAnyAuthority( "ALL", "M_dhis-web-cache-cleaner" )
-                .antMatchers( "/dhis-web-data-administration/**" )
-                .hasAnyAuthority( "ALL", "M_dhis-web-data-administration" )
-                .antMatchers( "/dhis-web-data-quality/**" ).hasAnyAuthority( "ALL", "M_dhis-web-data-quality" )
-                .antMatchers( "/dhis-web-messaging/**" ).hasAnyAuthority( "ALL", "M_dhis-web-messaging" )
-                .antMatchers( "/dhis-web-datastore/**" ).hasAnyAuthority( "ALL", "M_dhis-web-datastore" )
-                .antMatchers( "/dhis-web-scheduler/**" ).hasAnyAuthority( "ALL", "M_dhis-web-scheduler" )
-                .antMatchers( "/dhis-web-sms-configuration/**" )
-                .hasAnyAuthority( "ALL", "M_dhis-web-sms-configuration" )
-                .antMatchers( "/dhis-web-user/**" ).hasAnyAuthority( "ALL", "M_dhis-web-user" )
-                .antMatchers( "/dhis-web-aggregate-data-entry/**" )
-                .hasAnyAuthority( "ALL", "M_dhis-web-aggregate-data-entry" )
+        return http.build();
+    }
 
-                .antMatchers( "/**" ).authenticated()
-                .and()
+    @Bean
+    public Http401LoginUrlAuthenticationEntryPoint entryPoint()
+    {
+        // Converts to a HTTP basic login if "XMLHttpRequest".equals(
+        // request.getHeader( "X-Requested-With" ) )
+        return new Http401LoginUrlAuthenticationEntryPoint( "/dhis-web-commons/security/login.action" );
+    }
 
-                .formLogin()
-                .authenticationDetailsSource( twoFactorWebAuthenticationDetailsSource )
-                .loginPage( "/dhis-web-commons/security/login.action" )
-                .usernameParameter( "j_username" ).passwordParameter( "j_password" )
-                .loginProcessingUrl( "/dhis-web-commons-security/login.action" )
-                .failureHandler( customAuthFailureHandler )
-                .successHandler( authenticationSuccessHandler() )
-                .permitAll()
-                .and()
+    @Bean
+    public DefaultAuthenticationSuccessHandler authenticationSuccessHandler()
+    {
+        DefaultAuthenticationSuccessHandler successHandler = new DefaultAuthenticationSuccessHandler();
+        successHandler.setRedirectStrategy( mappedRedirectStrategy() );
 
-                .logout()
-                .logoutUrl( "/dhis-web-commons-security/logout.action" )
-                .logoutSuccessUrl( "/" )
-                .logoutSuccessHandler( dhisOidcLogoutSuccessHandler )
-                .deleteCookies( "JSESSIONID" )
-                .permitAll()
-                .and()
+        return successHandler;
+    }
 
-                .exceptionHandling()
-                .authenticationEntryPoint( entryPoint() )
+    @Bean
+    public MappedRedirectStrategy mappedRedirectStrategy()
+    {
+        MappedRedirectStrategy mappedRedirectStrategy = new MappedRedirectStrategy();
+        mappedRedirectStrategy.setRedirectMap( IGNORED_REDIRECTS_AFTER_LOGIN_MAP );
+        mappedRedirectStrategy.setDeviceResolver( deviceResolver() );
 
-                .and()
+        return mappedRedirectStrategy;
+    }
 
-                .csrf()
-                .disable()
+    @Bean
+    public DeviceResolver deviceResolver()
+    {
+        return new LiteDeviceResolver();
+    }
 
-                .addFilterBefore( new CspFilter( dhisConfig, configurationService ),
-                    HeaderWriterFilter.class )
+    @Bean
+    public RequestMatcher analyticsPluginResources()
+    {
+        String pattern = ".*(dhis-web-mapping\\/map.js|dhis-web-visualizer\\/chart.js|dhis-web-maps\\" +
+            "/map.js|dhis-web-event-reports\\/eventreport.js|dhis-web-event-visualizer\\/eventchart.js|dhis-web-pivot\\/reporttable.js)";
 
-                .addFilterBefore( CorsFilter.get(), BasicAuthenticationFilter.class )
-                .addFilterBefore( CustomAuthenticationFilter.get(), UsernamePasswordAuthenticationFilter.class );
+        return new org.springframework.security.web.util.matcher.RegexRequestMatcher( pattern, "GET" );
+    }
 
-            setHttpHeaders( http );
-        }
+    @Bean
+    public ModuleAccessVoter moduleAccessVoter()
+    {
+        ModuleAccessVoter voter = new ModuleAccessVoter();
+        voter.setAttributePrefix( "M_" );
+        voter.setAlwaysAccessible( Set.of(
+            "dhis-web-commons-menu",
+            "dhis-web-commons-oust",
+            "dhis-web-commons-ouwt",
+            "dhis-web-commons-security",
+            "dhis-web-commons-i18n",
+            "dhis-web-commons-ajax",
+            "dhis-web-commons-ajax-json",
+            "dhis-web-commons-ajax-html",
+            "dhis-web-commons-stream",
+            "dhis-web-commons-help",
+            "dhis-web-commons-about",
+            "dhis-web-menu-management",
+            "dhis-web-apps",
+            "dhis-web-api-mobile",
+            "dhis-web-portal",
+            "dhis-web-uaa" ) );
+        return voter;
+    }
 
-        @Bean
-        public Http401LoginUrlAuthenticationEntryPoint entryPoint()
-        {
-            // Converts to a HTTP basic login if "XMLHttpRequest".equals(
-            // request.getHeader( "X-Requested-With" ) )
-            return new Http401LoginUrlAuthenticationEntryPoint( "/dhis-web-commons/security/login.action" );
-        }
+    @Bean
+    public ActionAccessVoter actionAccessVoter()
+    {
+        ActionAccessVoter voter = new ActionAccessVoter();
+        voter.setAttributePrefix( "F_" );
+        voter.setRequiredAuthoritiesKey( "requiredAuthorities" );
+        voter.setAnyAuthoritiesKey( "anyAuthorities" );
+        return voter;
+    }
 
-        @Bean
-        public DefaultAuthenticationSuccessHandler authenticationSuccessHandler()
-        {
-            DefaultAuthenticationSuccessHandler successHandler = new DefaultAuthenticationSuccessHandler();
-            successHandler.setRedirectStrategy( mappedRedirectStrategy() );
+    @Bean
+    public WebExpressionVoter webExpressionVoter()
+    {
+        DefaultWebSecurityExpressionHandler h = new DefaultWebSecurityExpressionHandler();
+        h.setDefaultRolePrefix( "" );
+        WebExpressionVoter voter = new WebExpressionVoter();
+        voter.setExpressionHandler( h );
+        return voter;
+    }
 
-            return successHandler;
-        }
-
-        @Bean
-        public MappedRedirectStrategy mappedRedirectStrategy()
-        {
-            MappedRedirectStrategy mappedRedirectStrategy = new MappedRedirectStrategy();
-            mappedRedirectStrategy.setRedirectMap( IGNORED_REDIRECTS_AFTER_LOGIN_MAP );
-            mappedRedirectStrategy.setDeviceResolver( deviceResolver() );
-
-            return mappedRedirectStrategy;
-        }
-
-        @Bean
-        public DeviceResolver deviceResolver()
-        {
-            return new LiteDeviceResolver();
-        }
-
-        @Bean
-        public RequestMatcher analyticsPluginResources()
-        {
-            String pattern = ".*(dhis-web-mapping\\/map.js|dhis-web-visualizer\\/chart.js|dhis-web-maps\\" +
-                "/map.js|dhis-web-event-reports\\/eventreport.js|dhis-web-event-visualizer\\/eventchart.js|dhis-web-pivot\\/reporttable.js)";
-
-            return new org.springframework.security.web.util.matcher.RegexRequestMatcher( pattern, "GET" );
-        }
-
-        @Bean
-        public ModuleAccessVoter moduleAccessVoter()
-        {
-            ModuleAccessVoter voter = new ModuleAccessVoter();
-            voter.setAttributePrefix( "M_" );
-            voter.setAlwaysAccessible( Set.of(
-                "dhis-web-commons-menu",
-                "dhis-web-commons-oust",
-                "dhis-web-commons-ouwt",
-                "dhis-web-commons-security",
-                "dhis-web-commons-i18n",
-                "dhis-web-commons-ajax",
-                "dhis-web-commons-ajax-json",
-                "dhis-web-commons-ajax-html",
-                "dhis-web-commons-stream",
-                "dhis-web-commons-help",
-                "dhis-web-commons-about",
-                "dhis-web-menu-management",
-                "dhis-web-apps",
-                "dhis-web-api-mobile",
-                "dhis-web-portal",
-                "dhis-web-uaa" ) );
-            return voter;
-        }
-
-        @Bean
-        public ActionAccessVoter actionAccessVoter()
-        {
-            ActionAccessVoter voter = new ActionAccessVoter();
-            voter.setAttributePrefix( "F_" );
-            voter.setRequiredAuthoritiesKey( "requiredAuthorities" );
-            voter.setAnyAuthoritiesKey( "anyAuthorities" );
-            return voter;
-        }
-
-        @Bean
-        public WebExpressionVoter webExpressionVoter()
-        {
-            DefaultWebSecurityExpressionHandler h = new DefaultWebSecurityExpressionHandler();
-            h.setDefaultRolePrefix( "" );
-            WebExpressionVoter voter = new WebExpressionVoter();
-            voter.setExpressionHandler( h );
-            return voter;
-        }
-
-        @Bean( "accessDecisionManager" )
-        public LogicalOrAccessDecisionManager accessDecisionManager()
-        {
-            List<AccessDecisionManager> decisionVoters = Arrays.asList(
-                new UnanimousBased( List.of( new SimpleAccessVoter( "ALL" ) ) ),
-                new UnanimousBased( List.of( actionAccessVoter(), moduleAccessVoter() ) ),
-                new UnanimousBased( List.of( webExpressionVoter() ) ),
-                new UnanimousBased( List.of( externalAccessVoter ) ),
-                new UnanimousBased( List.of( new AuthenticatedVoter() ) ) );
-            return new LogicalOrAccessDecisionManager( decisionVoters );
-        }
+    @Bean( "accessDecisionManager" )
+    public LogicalOrAccessDecisionManager accessDecisionManager()
+    {
+        List<AccessDecisionManager> decisionVoters = Arrays.asList(
+            new UnanimousBased( List.of( new SimpleAccessVoter( "ALL" ) ) ),
+            new UnanimousBased( List.of( actionAccessVoter(), moduleAccessVoter() ) ),
+            new UnanimousBased( List.of( webExpressionVoter() ) ),
+            new UnanimousBased( List.of( externalAccessVoter ) ),
+            new UnanimousBased( List.of( new AuthenticatedVoter() ) ) );
+        return new LogicalOrAccessDecisionManager( decisionVoters );
     }
 }
